# pidcalib2

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  flake.nix  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: README.md
calib_samples/: 20-MagDown-K  20-MagDown-K_MuonUnBiased  20-MagDown-Mu  20-MagDown-P  20-MagDown-P_IncLc  20-MagDown-P_MuonUnBiased  20-MagDown-Pi  20-MagDown-Pi_MuonUnBiased  20-MagDown-e  20-MagUp-K  20-MagUp-K_MuonUnBiased  20-MagUp-Mu  20-MagUp-P  20-MagUp-P_IncLc  20-MagUp-P_MuonUnBiased  20-MagUp-Pi  20-MagUp-Pi_MuonUnBiased  20-MagUp-e  20r1-MagDown-K  20r1-MagDown-K_MuonUnBiased  20r1-MagDown-Mu  20r1-MagDown-P  20r1-MagDown-P_IncLc  20r1-MagDown-P_MuonUnBiased  20r1-MagDown-Pi  20r1-MagDown-Pi_MuonUnBiased  20r1-MagDown-e  20r1-MagUp-K  20r1-MagUp-K_MuonUnBiased  20r1-MagUp-Mu  20r1-MagUp-P  20r1-MagUp-P_IncLc  20r1-MagUp-P_MuonUnBiased  20r1-MagUp-Pi  20r1-MagUp-Pi_MuonUnBiased  20r1-MagUp-e  21-MagDown-K  21-MagDown-Mu  21-MagDown-P  21-MagDown-P_IncLc  (+134 more)
efficiency_gen/: rdx-run2-ubdt-misidgen.sh  rdx-run2-ubdt.sh  rdx-run2-ubdt_veto.sh
nix/: default.nix  overlay.nix
nix/tqdm/: default.nix
pidcalib2/: __main__.py  binning.py  make_eff_hists.py  make_perf_hists.py  merge_trees.py  pid_data.py  ref_calib.py  utils.py
scripts/: pklhisto2root.py  plots.ipynb  plots.py
src/pidcalib2/: aliases.py  argparse_actions.py  binning.py  make_eff_hists.py  markdown_table.py  merge_trees.py  pid_data.py  pklhisto2root.py  plot_calib_distributions.py  ref_calib.py  samples.py  utils.py
tests/: __init__.py  test_binning.py  test_make_eff_hist.py  test_merge_trees.py  test_pid_data.py  test_ref_calib.py  test_utils.py
tests/data/: Turbo18-MagUp-Pi  cal_test_data.csv  effhist_2018_up_K_DLLK>4_P_ETA_nTracks.pkl  ref_PID_eff.root  (+5 more)
(+21 files in other folders)
