[metadata]
name = pidcalib2
author = Daniel Cervenkov
author_email = daniel.cervenkov@cern.ch
description = A set of tools for estimating LHCb PID efficiencies
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
url = https://gitlab.cern.ch/lhcb-rta/pidcalib2
version = 1.0.6-umd
project_urls =
    Bug Tracker = https://gitlab.cern.ch/lhcb-rta/pidcalib2/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    boost_histogram
    logzero
    matplotlib
    mplhep
    numpy
    pandas
    tqdm
    uproot>=4.2.1

[options.packages.find]
where = src

[options.package_data]
* = data/*, test_data/*

[options.entry_points]
console_scripts =
    pidcalib2.make_eff_hists = pidcalib2.make_eff_hists:main
    pidcalib2.ref_calib = pidcalib2.ref_calib:main
    pidcalib2.merge_trees = pidcalib2.merge_trees:main
    pidcalib2.pklhisto2root = pidcalib2.pklhisto2root:main
    pidcalib2.plot_calib_distributions = pidcalib2.plot_calib_distributions:main
